# ursaki

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  SETUP.md  package-lock.json  package.json  tsconfig.json  turbo.json
.cursor/rules/: ursaki-global.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-backend.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: hybrid_compute.rs  lib.rs  main.rs  screen_time_monitor.rs  typing_monitor.rs
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/watch-android/: README.md
backend/: Dockerfile  README.md  SAFETY_AUDIT.md  pyproject.toml  requirements.txt
backend/src/ursaki/: __init__.py  config.py  main.py  models.py
backend/src/ursaki/avatar/: __init__.py  avatar_state_manager.py
backend/src/ursaki/biometric/: hrv_analyzer.py  intervention_engine.py
backend/src/ursaki/engine/: __init__.py  memory_manager.py  orchestrator.py  persona_engine.py  safety_guard.py
backend/src/ursaki/marketplace/: mod_manager.py  reputation_system.py
backend/src/ursaki/memory_palace/: terrain_generator.py
backend/src/ursaki/routers/: __init__.py  avatar.py  biometric.py  chat.py  marketplace.py  memory_palace.py  shadow.py  social.py
backend/src/ursaki/shadow/: resilience_tracker.py  shadow_session_manager.py
backend/src/ursaki/social/: bridge_session_manager.py
backend/tests/: conftest.py  test_avatar.py  test_engine.py  test_health.py  test_hrv_analyzer.py  test_safety_guard.py
infra/: .env.docker  docker-compose.yml
models/: README.md  config.json
scripts/: dev.ps1
shared/: package.json  tsconfig.json
shared/types/: index.ts
(+38 files in other folders)
