[package]
name = "ursaki-desktop"
version = "1.0.0"
description = "UrSaKi Desktop Sanctuary — burnout bodyguard"
authors = ["Sai Surya Kiran"]
edition = "2021"

[lib]
name = "ursaki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
